--- a/Csscheatsheet/index.html
+++ b/Csscheatsheet/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tevin style cheatsheet </title>
     <link rel="stylesheet" href="css/styles.css">
+    lin
 </head>
 <body>
     <div class="container">
@@ -15,6 +16,37 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, fugit repellat. Cumque, voluptas? Est ipsa cumque, quae molestias, voluptate distinctio perspiciatis cum, necessitatibus aut possimus porro quam explicabo dolorum excepturi.
     </p>
     </div>
+    <div class="box2">
+        <h1>Goodbye World</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, fugit repellat. Cumque, voluptas? Est ipsa cumque, quae molestias, voluptate distinctio perspiciatis cum, necessitatibus aut possimus porro quam explicabo dolorum excepturi.
+        </p>
+        </div>
+        <div class="categories">
+            <h2>Categories</h2>
+            <ul>
+                <li><a href="#">Category 1</a></li>
+                <li><a href="#">Category 2</a></li>
+                <li><a href="#">Category 3</a></li>
+                <li><a href="#">Category 4</a></li>
+            </ul>
+        </div>
+        <form class="myform">
+          <div class="formgroup">
+            <label>Name</label>
+            <input type="text">
+          </div>
+          <div class="formgroup">
+            <label>Email</label>
+            <input type="text">
+          </div>
+        <div class="formgroup">
+          <label>Message</label>
+          <textarea name="Message"></textarea>
+        </div>
+        <button class="buttons">submit</button>
+        <button class="buttons">Hello</button>
+        </form>
 </div>
 </body>
 </html>
